    the safety of --fast or --relaxed by letting the content of
    annexed files be verified with a checksum that is calculated
    on a later download from the web. This will become the default later.
  * Added dependency on unbounded-delays.
  * reregisterurl: New command that can change an url from being
    used by a special remote to being used by the web remote.

 -- Joey Hess <id@joeyh.name>  Tue, 27 Feb 2024 13:07:10 -0400

git-annex (10.20240227) upstream; urgency=medium

  * importfeed: Added --scrape option, which uses yt-dlp to screen scrape
    the equivilant of an RSS feed.
  * importfeed --force: Don't treat it as a failure when an already
    downloaded file exists. (Fixes a behavior change introduced in
    10.20230626.)
  * importfeed --force: Avoid creating duplicates of existing
    already downloaded files when yt-dlp or a special remote was used.
  * addurl, importfeed: Added --raw-except option.
  * stack.yaml: Update to lts-22.9 and use crypton.
  * assistant, undo: When committing, let the usual git commit
    hooks run.
  * Added annex.commitmessage-command config.
  * pre-commit: Avoid committing the git-annex branch
    (except when a commit is made in a view, which changes metadata).
  * Pass --no-warnings to yt-dlp.

 -- Joey Hess <id@joeyh.name>  Tue, 27 Feb 2024 12:58:30 -0400

git-annex (10.20240129) upstream; urgency=medium

  * info: Added "annex sizes of repositories" table to the overall display.
  * import: Sped up import from special remotes.
  * import: Added --message/-m option.
  * Support using commands that implement the Stateless OpenPGP command line
    interface, as an alternative to gpg.
    Currently only supported for encryption=shared special remotes,
    when annex.shared-sop-command is configured.
  * test: Test a specified Stateless OpenPGP command when
    run with eg --test-git-config annex.shared-sop-command=sqop
  * Improve disk free space checking when transferring unsized keys to
    local git remotes.